new file:   webserver/common/data.js modified:   webserver/common/sql.js new file:   webserver/common/subscriptions.js modified:   webserver/emulator/create.js deleted:    webserver/emulator/data.js modified:   webserver/emulator/emulator.js modified:   webserver/emulator/others.js modified:   webserver/emulator/utils.js modified:   webserver/main.js modified:   webserver/web/files/eventhandler.js modified:   webserver/web/files/floating.js modified:   webserver/web/files/main.js modified:   webserver/web/files/script.js modified:   webserver/web/files/style.css modified:   webserver/web/mywf.js modified:   webserver/web/web.js modified:   webserver/web/webservicesNOTauthed.js modified:   webserver/web/webservicesauthed

--- a/webserver/web/files/style.css
+++ b/webserver/web/files/style.css
@@ -35,7 +35,7 @@ input[type=button],input[type=submit] {
 
 input[type=text], input[type=url], input[type=datetime-local], select, input[type=password], input[type=email] {
     
-    width:330px;
+    width:400px;
     
 }
 
@@ -235,4 +235,25 @@ input[type="submit"] {
   .wrap-all-the-things {
     padding-left: 70px;
   }
+}
+
+
+
+.tooltiptext {
+  visibility: hidden;
+
+  background-color: grey;
+  color: black;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
