new file:   orm.js modified:   webserver/common/data.js modified:   webserver/common/sql.js modified:   webserver/common/subscriptions.js modified:   webserver/common/validations.js modified:   webserver/emulator/create.js modified:   webserver/emulator/emulator.js modified:   webserver/emulator/others.js modified:   webserver/main.js modified:   webserver/web/files/divimg.js modified:   webserver/web/files/floating.js modified:   webserver/web/files/main.js modified:   webserver/web/files/script.js modified:   webserver/web/files/style.css modified:   webserver/web/mywf.js modified:   webserver/web/webservicesNOTauthed.js modified:   webserver/web/webservicesauthed

--- a/webserver/web/files/style.css
+++ b/webserver/web/files/style.css
@@ -244,7 +244,7 @@ input[type="submit"] {
 
   background-color: grey;
   color: black;
-  text-align: center;
+  text-align: left;
   padding: 5px 0;
   border-radius: 6px;
  
